--- a/index.html
+++ b/index.html
@@ -1,1 +1,103 @@
-index.html
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Artem Kozhuhovski CV</title>
+    <link rel="stylesheet" href="assets/img/avatar.jpg">
+    <link rel="icon" href="assets/img/favicon.ico">
+  </head>
+  <body>
+    <header>
+      <table>
+        <tr>
+          <td>
+            <img src="assets/img/avatar.jpg" width="300" alt="My photo" />
+          </td>
+          <td>
+            <h1>Artem Kozhuhovski (Артем Кожуховский)</h1>
+            <p><em>I am <strong>Junior Frontend Developer</strong></em></p>
+          </td>
+        </tr>
+      </table>
+    </header>
+
+    <main></main>
+    <h2>These are links on my resumes on web-sites: </h2>
+    <ul>
+      <li><a href="https://rabota.by/resume/09ecebf7ff07094ef30039ed1f3852424f4a58" target="_blank">rabota.by</a></li>
+      <li><a href="https://linkedin.com/in/артём-кожуховский-327a971b0" target="_blank">linkedin.com </a></li>
+    </ul>
+    
+    <h2>Мои хобби</h2>
+    <ol>
+      <li>Блоггер</li>
+      <li>Быстрая езда на машинах</li>
+      <li>Спорт: ММА, лыжи</li>
+      <li>Путешествия</li>
+    </ol>
+
+
+
+    <h2>Опыт работы</h2>
+    <table>
+      <tr>
+        <th>Компания</th>
+        <th>Должность</th>
+        <th>Год</th>
+      </tr>
+      <tr>
+        <td>EPAM</td>
+        <td>Software Engineer</td>
+        <td>2016 - 2017</td>
+      </tr>
+      <tr>
+        <td>Software Outsorcing Services</td>
+        <td>Lead Frontend</td>
+        <td>2017 - 2019</td>
+      </tr>
+    </table>
+
+
+
+    <h2>Youtube Курсы</h2>
+    <a href="youtube.html">Посмотреть список</a>
+
+
+    <h2>Связаться со мной</h2>
+
+    <form action="/">
+      <label for="name">Ваше имя:</label>
+      <input type="text" id="name" placeholder="Введите ваше имя...">
+
+      <br>
+
+      <label for="email">Ваш Email:</label>
+      <input type="email" id="email" placeholder="Введите email...">
+
+      <br>
+
+      <label for="text">Вашe сообщение:</label>
+      <br>
+      <textarea id="text" rows="2" cols="15"></textarea>
+
+      <br>
+
+      <input type="submit" value="Связаться!">
+    </form>
+
+    <footer></footer>
+  </body>
+</html>
+
+
+
+
+These are links on my resumes on web-sites: 
+
+1. [rabota.by] (https://rabota.by/resume/09ecebf7ff07094ef30039ed1f3852424f4a58)
+2. [linkedin.com] (https://linkedin.com/in/артём-кожуховский-327a971b0)
+
+I studied at the Gomel State university at the Faculty of Law, graduated in 2013.\
+I have been working as a legal advisor since 2016.\
+I have no programming experience at the moment.\
+My english is at A2-level. 
